--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,7 +16,7 @@
 				"ListaCuidadores.c",
 				"ListaCuidadores.h",
 				"-Wall",
-				"-Werror",
+				//"-Werror",
                 "-fdiagnostics-color=always",
                 "-g",
             ],
