Organizando os TADS

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,15 +6,15 @@
             "command": "/usr/bin/gcc",
             "args": [
 				"-o", "EDCare", 
-				"EDCare.c",
-				"Idoso.c",
-				"Idoso.h",
-				"Cuidador.c",
-				"Cuidador.h",
-				"ListaIdoso.c",
-				"ListaIdoso.h",
-				"ListaCuidadores.c",
-				"ListaCuidadores.h",
+				"Source/EDCare.c",
+				"Source/Idoso.c",
+				"Source/Idoso.h",
+				"Source/Cuidador.c",
+				"Source/Cuidador.h",
+				"Source/ListaIdoso.c",
+				"Source/ListaIdoso.h",
+				"Source/ListaCuidadores.c",
+				"Source/ListaCuidadores.h",
 				"-Wall",
 				//"-Werror",
                 "-fdiagnostics-color=always",
