Changes the name of the file of Source Codes

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,15 +6,15 @@
             "command": "/usr/bin/gcc",
             "args": [
 				"-o", "EDCare", 
-				"Source/EDCare.c",
-				"Source/Idoso.c",
-				"Source/Idoso.h",
-				"Source/Cuidador.c",
-				"Source/Cuidador.h",
-				"Source/ListaIdoso.c",
-				"Source/ListaIdoso.h",
-				"Source/ListaCuidadores.c",
-				"Source/ListaCuidadores.h",
+				"Sources/EDCare.c",
+				"Sources/Idoso.c",
+				"Sources/Idoso.h",
+				"Sources/Cuidador.c",
+				"Sources/Cuidador.h",
+				"Sources/ListaIdoso.c",
+				"Sources/ListaIdoso.h",
+				"Sources/ListaCuidadores.c",
+				"Sources/ListaCuidadores.h",
                 "-lm",
 				"-Wall",
 				//"-Werror",
